# Kratio

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kratio/: analyzer.py  cli.py  constants.py  exceptions.py  file_handler.py  main.py  utils.py  visualizer.py
src/kratio/cli/: cli.py  cli_parser.py  controller.py
src/kratio/core/: analyzer.py  analyzer_interface.py  analyzers.py  spacy_loader.py
src/kratio/io/: file_handler.py  serializer.py
src/kratio/utils/: data_utils.py  logging_config.py  timing.py  utils.py  watch.py
src/kratio/visualization/: visualizer.py
tests/: test_analyzer.py  test_file_handler.py  test_visualizer.py
tests/integration/: test_analysis_pipeline.py  test_serialization.py
tests/unit/: test_analyzer.py  test_data_utils.py  test_file_handler.py  test_spacy_loader.py  test_timing.py  test_visualizer.py
tests/unit/core/: test_analyzer.py
tests/unit/io/: test_serializer.py
tests/unit/utils/: test_logging_config.py  test_utils.py  test_watch.py
tests/unit/utils/io/: test_file_handler.py
tests/unit/visualization/: test_visualizer.py
